--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.3",
-    "expo": "^52.0.0",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.3",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
+    "expo": "^52.0.39",
+    "expo-status-bar": "2.0.1",
+    "react": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-gesture-handler": "2.20.2",
+    "react-native-reanimated": "3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "4.4.0",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
